--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "react-bootstrap": "^1.6.1",
+    "bootstrap": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
