--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2",
     "react-bootstrap": "^1.6.1",
-    "bootstrap": "^5.0.1"
+    "bootstrap": "^5.0.1",
+    "axios": "^0.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
